<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_phone"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:imeOptions="actionNext"
            android:enabled="false"
            android:focusable="false"
            android:textColor="@color/textColorSecondary"
            android:inputType="textEmailAddress"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/hint_address"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_red"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small" />


        <TextView
            android:id="@+id/tv_send_change"
            android:layout_width="@dimen/define_dimen_200"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_red_shape_corner_6"
            android:gravity="center"
            android:padding="@dimen/define_dimen_12"
            android:text="@string/send_change"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />





    </LinearLayout>

</LinearLayout>
