<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:ignore="Autofill">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/define_dimen_150"
        android:layout_height="@dimen/define_dimen_150"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/backgrff"
        app:civ_border_color="@color/yellow"
        app:civ_border_width="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_sign_up"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="157dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_18">

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/sign_in"-->
        <!--            android:textColor="@color/colorPrimaryDark"-->
        <!--            android:textSize="@dimen/text_size_xnormal"-->
        <!--            android:textStyle="bold" />-->

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />


        <RelativeLayout
            android:id="@+id/layout_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@color/white">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:id="@+id/show_pass_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="316dp"
                android:alpha=".5"
                android:onClick="ShowHidePass"
                android:padding="5dp"
                android:src="@drawable/icons8_hide_24" />


        </RelativeLayout>

        <!--        <EditText-->
        <!--            android:id="@+id/edt_password"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="@dimen/define_dimen_10"-->
        <!--            android:hint="@string/hint_password"-->
        <!--            android:imeOptions="actionDone"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:textColor="@color/textColorPrimary"-->
        <!--            android:textSize="@dimen/text_size_small" />-->

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:orientation="horizontal"
            android:visibility="invisible">

            <!--            <RadioButton-->
            <!--                android:id="@+id/rdb_admin"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/admin" />-->

            <!--            <RadioButton-->
            <!--                android:id="@+id/rdb_user"-->
            <!--                android:checked="true"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="@dimen/define_dimen_20"-->
            <!--                android:text="@string/user" />-->
        </RadioGroup>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:background="@drawable/bg_main_corner_8"
            android:text="@string/sign_in_user"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:padding="@dimen/define_dimen_10"
            android:text="@string/forgot_password"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_not_account"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:text="@string/sign_up"
            android:textColor="@color/yellow"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</RelativeLayout>