<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_location"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/define_dimen_6"
        android:layout_marginStart="@dimen/define_dimen_26"
        android:drawablePadding="10dp"
        android:textStyle="bold"
        android:text="@string/_26_phan_nh_ph_ng_p3_hcm"
        android:drawableStart="@drawable/baseline_location_on_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/layout_search"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="@dimen/define_dimen_10"
        android:layout_marginEnd="@dimen/define_dimen_10">

        <EditText
            android:id="@+id/edt_search_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_shape_border_red_corner_30"
            android:hint="@string/hint_search_name"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="@dimen/define_dimen_10"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xsmall"
            tools:ignore="Autofill" />

<!--        <View-->
<!--            android:layout_width="1dp"-->
<!--            android:layout_height="@dimen/define_dimen_30"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_toStartOf="@+id/img_search"-->
<!--            android:background="@color/colorPrimary" />-->

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_5"
            android:src="@drawable/ic_search_red"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        app:cardCornerRadius="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/viewpager_2"
                            android:layout_width="match_parent"
                            android:layout_height="200dp" />



                    </androidx.cardview.widget.CardView>



                    <me.relex.circleindicator.CircleIndicator3
                        android:id="@+id/indicator_3"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/define_dimen_30"
                        android:layout_gravity="center"
                        app:ci_drawable="@drawable/bg_indicatior_selected"
                        app:ci_drawable_unselected="@drawable/bg_indicatior_unselected" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/define_dimen_10"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="@dimen/define_dimen_5"
                    android:text="@string/category_food"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_newproduct"
                        app:cardCornerRadius="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="@dimen/define_dimen_160"
                            android:layout_height="@dimen/define_dimen_110"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/define_dimen_5">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/define_dimen_80"
                                android:src="@drawable/monmoii" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="3dp"
                                android:text="@string/new_food"
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size_xsmall"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_specialproduct"
                        android:layout_marginStart="@dimen/define_dimen_10"
                        app:cardCornerRadius="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="@dimen/define_dimen_5"
                            android:layout_width="@dimen/define_dimen_160"
                            android:layout_height="@dimen/define_dimen_110">
                            <ImageView
                                android:scaleType="centerInside"
                                android:src="@drawable/garann"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/define_dimen_80"/>
                            <TextView
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size_xsmall"
                                android:layout_marginTop="3dp"
                                android:textStyle="bold"
                                android:text="@string/special_food"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="@dimen/define_dimen_10"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_combo1"
                        app:cardCornerRadius="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="@dimen/define_dimen_5"
                            android:layout_width="@dimen/define_dimen_160"
                            android:layout_height="@dimen/define_dimen_110">
                            <ImageView
                                android:src="@drawable/com"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/define_dimen_80"/>
                            <TextView
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size_xsmall"
                                android:layout_marginTop="3dp"
                                android:textStyle="bold"
                                android:text="Burger - Cơm - Mì Ý"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_combo2"
                        app:cardCornerRadius="10dp"
                        android:layout_marginStart="@dimen/define_dimen_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="@dimen/define_dimen_5"
                            android:layout_width="@dimen/define_dimen_160"
                            android:layout_height="@dimen/define_dimen_110">
                            <ImageView
                                android:src="@drawable/trangmieng"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/define_dimen_80"/>
                            <TextView
                                android:textColor="@color/black"
                                android:textSize="@dimen/text_size_xsmall"
                                android:layout_marginTop="3dp"
                                android:textStyle="bold"
                                android:text="Thức Uống - Tráng Miệng"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/define_dimen_10"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="@dimen/define_dimen_5"
                    android:text="@string/food_suggest"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_food"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:focusable="false"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/define_dimen_10"
                    android:layout_marginBottom="@dimen/define_dimen_10" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
